优化启动页，删除一部分loading

--- a/html/index/index_head.html
+++ b/html/index/index_head.html
@@ -240,7 +240,7 @@
     H.ready(function () {
 
         // uiloading(null, true)
-        uiloading()
+        // uiloading()
         
         H.openFrameGroupNavOrFoot(function (ret, err) {
             
